...
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_picture_bonus">
        <Button
            android:id="@+id/button_sorry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sorry"
            android:textAppearance="@style/small"
            android:layout_weight="0.5"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/baseline_close_24"
            style="@style/Button.Elevated.Secondary"/>

        <Button
            android:id="@+id/button_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textAppearance="@style/small"
            android:layout_weight="0.5"
            android:layout_marginStart="16dp"
...
