<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:id="@+id/qr_detected">

    <TextView
        android:id="@+id/qr_detected_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_detected"
...
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            android:layout_weight="1"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_button_description"
        android:src="@drawable/baseline_arrow_forward_24"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
