<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_camera"
    app:startDestination="@id/camera">

    <fragment
        android:id="@+id/camera"
        android:name="com.example.qrquest.CameraFragment"
        android:label="camera_screen"
        tools:layout="@layout/camera_screen" >
...
