...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_alignParentStart="true"
            style="@style/Button.Secondary"
            android:id="@+id/camera_button_capture_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/camera_button_description"
            android:src="@drawable/baseline_photo_camera_24"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
...
