...
                android:text="@string/text_welcome"
                android:textAlignment="center"
                android:textAppearance="@style/small"
                android:layout_marginBottom="100dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button_description"
            android:src="@drawable/baseline_arrow_forward_24"
            android:layout_gravity="end"
            style="@style/Button.Primary"/>
...
